--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test": "jest",
     "lint": "eslint .",
     "preview": "vite preview",
-    "deploy": "yarn build && gh-pages -d dist"
+    "deploy": "yarn build && gh-pages -d dist",
+    "prepare": "husky"
   },
   "dependencies": {
     "react": "^18.3.1",
@@ -21,7 +22,7 @@
     "@babel/core": "^7.25.2",
     "@babel/preset-env": "^7.25.4",
     "@babel/preset-typescript": "^7.24.7",
-    "@eslint/js": "^9.9.0",
+    "@eslint/js": "^9.10.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^16.0.1",
@@ -31,16 +32,18 @@
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
     "babel-jest": "^29.7.0",
-    "eslint": "^9.9.0",
+    "eslint": "^9.10.0",
+    "eslint-plugin-react": "^7.36.1",
     "gh-pages": "^6.1.1",
     "globals": "^15.9.0",
+    "husky": "^9.1.6",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.3",
-    "typescript-eslint": "^8.0.1",
+    "typescript-eslint": "^8.6.0",
     "vite": "^5.4.1"
   }
 }
