--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "test": "jest",
-    "lint": "eslint .",
+    "lint": "eslint --fix .",
     "preview": "vite preview",
     "deploy": "yarn build && gh-pages -d dist",
     "prepare": "husky"
@@ -37,6 +37,7 @@
     "commitlint": "^19.5.0",
     "eslint": "^9.10.0",
     "eslint-plugin-react": "^7.36.1",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
     "gh-pages": "^6.1.1",
     "globals": "^15.9.0",
     "husky": "^9.1.6",
