--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "tsc -b && vite build",
     "test": "jest",
     "lint": "eslint .",
-    "lint fix": "eslint --fix .",
+    "lintfix": "eslint --fix .",
     "preview": "vite preview",
     "deploy": "yarn build && gh-pages -d dist",
     "prepare": "husky"
@@ -17,6 +17,7 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-error-boundary": "^4.0.13",
     "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
