--- a/package.json
+++ b/package.json
@@ -32,12 +32,14 @@
     "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^14.5.2",
     "@types/jest": "^29.5.13",
+    "@types/node": "^22.5.5",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
     "babel-jest": "^29.7.0",
     "commitlint": "^19.5.0",
     "eslint": "^9.10.0",
+    "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-react": "^7.36.1",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "gh-pages": "^6.1.1",
